--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head
+<head>
   <meta charset = "utf-8">
   <meta name ="viewport" content = "width=device-width, initial-scale=1">
   <title>Appilicious</title>
-  <link href ="css/main.mss" rel="stylesheet">
+  <link href ="css/main.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
